# HandRecognitionRos

./: ARCHITECTURE.md  CLAUDE.md  README.md  robot_viewer.html
HandRecognition/hand_recognition/: hand_drive_node.py
client_hand_control/: __init__.py  frame_gate.py  gestures.py  hand_control.py  keyboard_control.py  main.py  message.py  mqtt_publisher.py  requirements.txt  udp_publisher.py  ws_client.py
hand-gesture-robot/: HARDWARE_SETUP1.md  SETUP_GUIDE1.md
hand-gesture-robot/firmware/: README.md
hand-gesture-robot/firmware/arduino_slave/: arduino_slave.ino
hand-gesture-robot/firmware/esp32_master/: app_httpd.cpp  board_config.h  esp32_master.ino
hand-gesture-robot/firmware/esp32_simple/: esp32_simple.ino
server_gateway/: __init__.py  main.py  mqtt_bridge.py  package.xml  requirements.txt  ros_bridge.py  setup.cfg  setup.py  ws_server.py
